Cambia tamaño de letra y saludo

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Rafael Carrillo Bonilla</title>
+    <title>RAFAEL CARRILLO BONILLA</title>
 </head>
 
 <body>
-    <h1 class="text-center mt-5 display-4 text-primary">Bienvenido a mi sitio</h1>
+    <h1 class="text-center mt-5 display-4 text-primary">Bienvenid@ a mi sitio</h1>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
