Mejora la presentación del inicio

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" type="image/jpeg" href="img/favicon.png">
     <title>RAFAEL CARRILLO BONILLA</title>
 </head>
 
 <body>
-    <h1 class="text-center mt-5 display-4 text-primary">Bienvenid@ a mi sitio</h1>
-
+    <h1 class="text-center mt-5 display-4 text-primary">¡Bienvenid@ a mi sitio web personal!</h1>
+    <img src="img/IMG_6674.jpeg" alt="avatar" class="rounded-circle mx-auto d-block  shadow-lg p-3 mb-5 bg-black rounded"  width="300" height="300"/>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
