Incorpora proyecto del demeter

--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
 <body>
     <h1 class="text-center mt-5 display-4 text-primary">¡Bienvenid@ a mi sitio web personal!</h1>
     <img src="img/IMG_6674.jpeg" alt="avatar" class="rounded-circle mx-auto d-block  shadow-lg p-3 mb-5 bg-black rounded"  width="300" height="300"/>
+    
+    <section class="container">
+        <h2>PROYECTOS</h2>
+        <article class="proyecto d-flex flex-row flex-wrap">
+            <div class="texto">
+                <h3><a href="demeter/index.html">Demeter</a></h3> 
+                <p>Juego con pseudocódigo</p>
+            </div>
+            <img src="img/logodemeter.jpg" alt="logodemeter" />
+        </article>
+    </section>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
