Organiza mejor la estructura de los proyectos

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h2>PROYECTOS</h2>
         <article class="proyecto d-flex flex-row flex-wrap">
             <div class="texto">
-                <h3><a href="demeter/index.html">Demeter</a></h3> 
+                <h3><a href="proyectos/demeter/index.html">Demeter</a></h3> 
                 <p>Juego con pseudocódigo</p>
             </div>
             <img src="img/logodemeter.jpg" alt="logodemeter" />
