Prepara proyecto de buscaminas para incorporar a la zona de proyectos

--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
             </div>
             <img src="img/logodemeter.jpg" alt="logodemeter" />
         </article>
+        <article class="proyecto d-flex flex-row flex-wrap">
+            <div class="texto">
+                <h3><a href="#">Buscaminas</a></h3> 
+                <p>Mítico juego del buscaminas</p>
+            </div>
+            <img src="img/logobuscaminas.jpg" alt="logodemeter" />
+        </article>
     </section>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
