--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </article>
         <article class="proyecto d-flex flex-row flex-wrap">
             <div class="texto">
-                <h3><a href="#">Buscaminas</a></h3> 
+                <h3><a href="proyectos/buscaminas/index.html">Buscaminas</a></h3> 
                 <p>Mítico juego del buscaminas</p>
             </div>
             <img src="img/logobuscaminas.jpg" alt="logodemeter" />
