Incorpora botón par acceder a cada uno de los proyectos

--- a/index.html
+++ b/index.html
@@ -15,23 +15,25 @@
 
 <body>
     <h1 class="text-center mt-5 display-4 text-primary">¡Bienvenid@ a mi sitio web personal!</h1>
-    <img src="img/IMG_6674.jpeg" alt="avatar" class="rounded-circle mx-auto d-block  shadow-lg p-3 mb-5 bg-black rounded"  width="300" height="300"/>
+    <img src="img/avatar.jpeg" alt="avatar" class="rounded-circle mx-auto d-block  shadow-lg p-3 mb-5 bg-black rounded"  width="300" height="300"/>
     
     <section class="container">
-        <h2>PROYECTOS</h2>
+        <h2>PROYECTOS..</h2>
         <article class="proyecto d-flex flex-row flex-wrap">
             <div class="texto">
-                <h3><a href="proyectos/demeter/index.html">Demeter</a></h3> 
-                <p>Juego con pseudocódigo</p>
+                <h3>Demeter</h3> 
+                <p>Juego con pseudocódigo en donde mediante órdenes vas moviendo el robot con el objetivo de desactivar todas las minas hasta llegar al final.</p>
+                <a target="_blank" href="proyectos/demeter/index.html" class="botoncin botonver"><span>🤖</span><span>Ver más</span></a>
             </div>
-            <img src="img/logodemeter.jpg" alt="logodemeter" />
+            <img src="img/logo_demeter.jpg" alt="logo_demeter" />
         </article>
         <article class="proyecto d-flex flex-row flex-wrap">
             <div class="texto">
-                <h3><a href="proyectos/buscaminas/index.html">Buscaminas</a></h3> 
-                <p>Mítico juego del buscaminas</p>
+                <h3>Buscaminas</h3> 
+                <p>Mítico juego del buscaminas realizado en ReactJS donde tienes unos puntos que vas sumando por desactivar y una serie de minas.</p>
+                <a target="_blank" href="proyectos/buscaminas/index.html" class="botoncin botonver"><span>💣</span><span>Ver más</span></a>
             </div>
-            <img src="img/logobuscaminas.jpg" alt="logodemeter" />
+            <img src="img/logo_buscaminas.png" alt="logo_buscaminas" />
         </article>
     </section>
     <!-- Optional JavaScript -->
