Añade proyecto de GestDGT+ a la sección de proyectos

--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
             </div>
             <img src="img/logo_buscaminas.png" alt="logo_buscaminas" />
         </article>
+        <article class="proyecto d-flex flex-row flex-wrap">
+            <div class="texto">
+                <h3>GestDGT+</h3> 
+                <p>Aplicación destinada tanto para conductores como para agentes de policia, donde cada uno puede realizar sus funciones en relación al tipo de usuario.</p>
+                <a target="_blank" href="http://icarosproject.com/PROY/GESTDGT/" class="botoncin botonver"><span>🚔</span><span>Ver más</span></a>
+            </div>
+            <img src="img/logo_gestdgt+.png" alt="logo_gestdgt+" />
+        </article>
     </section>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
