--- a/proyectos/demeter/index.html
+++ b/proyectos/demeter/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta property='og:title' content='DEMETER II'/>
+    <meta property='og:image' content="https://imgur.com/a/Z4j77fO">
+    <meta property='og:description' content='Juego con pseudocódigo en donde mediante órdenes vas moviendo el robot con el objetivo de desactivar todas las minas hasta llegar al final.'/>
     <script src="https://kit.fontawesome.com/370876764b.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=IM+Fell+Great+Primer+SC&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Londrina+Solid&display=swap" rel="stylesheet">
