--- a/proyectos/demeter/index.html
+++ b/proyectos/demeter/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta property='og:title' content='DEMETER II'/>
-    <meta property='og:image' content="../../img/demeter_meta.png">
+    <meta property='og:image' content="https://raw.githubusercontent.com/rafacb98/rafacb98.github.io/main/img/demeter_meta.PNG">
     <meta property='og:description' content='Juego con pseudocódigo en donde mediante órdenes vas moviendo el robot con el objetivo de desactivar todas las minas hasta llegar al final.'/>
     <script src="https://kit.fontawesome.com/370876764b.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=IM+Fell+Great+Primer+SC&display=swap" rel="stylesheet">
