--- a/proyectos/demeter/index.html
+++ b/proyectos/demeter/index.html
@@ -5,9 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta property="og:locale" content="es_ES">
+    <meta property="og:type" content="article">
     <meta property='og:title' content='DEMETER II'/>
-    <meta property='og:image' content="https://raw.githubusercontent.com/rafacb98/rafacb98.github.io/main/img/demeter_meta.PNG">
     <meta property='og:description' content='Juego con pseudocódigo en donde mediante órdenes vas moviendo el robot con el objetivo de desactivar todas las minas hasta llegar al final.'/>
+    <meta property='og:image' content="https://raw.githubusercontent.com/rafacb98/rafacb98.github.io/main/img/demeter_meta.PNG">
+    <meta property='og:image:secure_url' content="https://raw.githubusercontent.com/rafacb98/rafacb98.github.io/main/img/demeter_meta.PNG">
+    <meta property="og:image:width" content="1920">
+    <meta property="og:image:height" content="941">
     <script src="https://kit.fontawesome.com/370876764b.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=IM+Fell+Great+Primer+SC&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Londrina+Solid&display=swap" rel="stylesheet">
