Cambia foto y título

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 </head>
 
 <body>
-    <h1 class="text-center mt-5 display-4 text-primary">¡Bienvenid@ a mi sitio web personal!</h1>
-    <img src="img/avatar.jpeg" alt="avatar" class="rounded-circle mx-auto d-block  shadow-lg p-3 mb-5 bg-black rounded"  width="300" height="300"/>
+    <h1 class="text-center mt-5 display-4 text-primary">RAFAEL CARRILLO BONILLA</h1>
+    <img src="img/avatar.jpg" alt="avatar" class="rounded-circle mx-auto d-block  shadow-lg p-3 mb-5 bg-black rounded"  width="300" height="300"/>
     
     <section class="container">
-        <h2>PROYECTOS..</h2>
+        <h2>MIS PROYECTOS..</h2>
         <article class="proyecto d-flex flex-row flex-wrap">
             <div class="texto">
                 <h3>Demeter</h3> 
