Pasa el fichero a HTML para poder leerlo el navegador

--- a/index.html
+++ b/index.html
@@ -44,12 +44,8 @@
                         Calle Maria Rosa nº47A 1º · San Pedro Alcántara, Marbella 29670 · (+34) 691 246 323 ·
                         <a href="mailto:rafaelcarrillobonilla@gmail.com">rafaelcarrillobonilla@gmail.com</a>
                     </div>
-                    <?php
-                        $nacimiento="1998-03-08";
-                        $fecha = time() - strtotime($nacimiento);
-                        $edad = floor($fecha / 31556926);
-                    ?>
-                    <p class="lead mb-5">Soy un chico de <?php echo $edad;?> años, desarrollador web y técnico en sistemas micro informáticos y redes. Tengo experiencia en el trato con personas al público y estoy enfocado tanto en la parte de front-end como de back-end, aunque personalmente me gusta algo más la parte de front-end.</p>
+                    
+                    <p class="lead mb-5">Soy un chico de 23 años, desarrollador web y técnico en sistemas micro informáticos y redes. Tengo experiencia en el trato con personas al público y estoy enfocado tanto en la parte de front-end como de back-end, aunque personalmente me gusta algo más la parte de front-end.</p>
                     <div class="social-icons">
                         <a class="social-icon" target="_blank" href="https://www.linkedin.com/in/rafael-carrillo-bonilla/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" target="_blank" href="https://github.com/rafacb98"><i class="fab fa-github"></i></a>
