--- a/index.html
+++ b/index.html
@@ -44,8 +44,15 @@
                         Calle Maria Rosa nº47A 1º · San Pedro Alcántara, Marbella 29670 · (+34) 691 246 323 ·
                         <a href="mailto:rafaelcarrillobonilla@gmail.com">rafaelcarrillobonilla@gmail.com</a>
                     </div>
-                    
-                    <p class="lead mb-5">Soy un chico de 23 años, desarrollador web y técnico en sistemas micro informáticos y redes. Tengo experiencia en el trato con personas al público y estoy enfocado tanto en la parte de front-end como de back-end, aunque personalmente me gusta algo más la parte de front-end.</p>
+                    <p class="lead mb-5">Soy un chico de <span id="edad"></span> años, desarrollador web y técnico en sistemas micro informáticos y redes. Tengo experiencia en el trato con personas al público y estoy enfocado tanto en la parte de front-end como de back-end, aunque personalmente me gusta algo más la parte de front-end.</p>
+                    <script>
+                        var dob = new Date("03/08/1998");
+                        var month_diff = Date.now() - dob.getTime();
+                        var age_dt = new Date(month_diff); 
+                        var year = age_dt.getUTCFullYear();
+                        var age = Math.abs(year - 1970);
+                        document.getElementById("edad").innerHTML=age;
+                    </script>
                     <div class="social-icons">
                         <a class="social-icon" target="_blank" href="https://www.linkedin.com/in/rafael-carrillo-bonilla/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" target="_blank" href="https://github.com/rafacb98"><i class="fab fa-github"></i></a>
