--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
         <link href="css/styles.css" rel="stylesheet" />
+        <link href="css/miestilo.css" rel="stylesheet" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -221,7 +222,7 @@ salir con mis amigos y hacer deporte, en especial el futbol.</p>
                             <div class="subheading mb-3">Hecho mediante servicios PHP con el framework SLIM</div>
                             <p>Aplicación destinada tanto para conductores como para agentes de policia, donde cada uno puede realizar sus funciones en relación al tipo de usuario.</p>
                         </div>
-                        <div class="flex-shrink-0"><a href="http://icarosproject.com/PROY/GESTDGT/" target="_blank" class="text-primary">Ir..</a></div>
+                        <div class="flex-shrink-0"><a href="http://icarosproject.com/PROY/GESTDGT/" target="_blank" class="botonir text-primary">Probar&nbsp;&nbsp;<i class="fa fa-eye"></i></a></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5 proyectos">
                     <img src="assets/img/logo_buscaminas.png" alt="logogbuscaminas" height="100px" class="logoproyectos" />
@@ -230,7 +231,7 @@ salir con mis amigos y hacer deporte, en especial el futbol.</p>
                             <div class="subheading mb-3">Hecho mediante ReactJS</div>
                             <p>Mítico juego del buscaminas donde tienes unos puntos que vas sumando por desactivar y una serie de minas.</p>
                         </div>
-                        <div class="flex-shrink-0"><a href="https://rafacb98.github.io/proyectos/buscaminas/index.html" target="_blank" class="text-primary">Ir..</a></div>
+                        <div class="flex-shrink-0"><a href="https://rafacb98.github.io/proyectos/buscaminas/index.html" target="_blank" class="botonir text-primary">Probar&nbsp;&nbsp;<i class="fa fa-eye"></i></a></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5 proyectos">
                     <img src="assets/img/logo_demeter.jpg" alt="logodemeter" height="100px" class="logoproyectos" />
@@ -239,7 +240,7 @@ salir con mis amigos y hacer deporte, en especial el futbol.</p>
                             <div class="subheading mb-3">Hecho mediante JavaScript</div>
                             <p>Juego con pseudocódigo en donde mediante órdenes vas moviendo el robot con el objetivo de desactivar todas las minas hasta llegar al final.</p>
                         </div>
-                        <div class="flex-shrink-0"><a href="https://rafacb98.github.io/proyectos/demeter/index.html" target="_blank" class="text-primary">Ir..</a></div>
+                        <div class="flex-shrink-0"><a href="https://rafacb98.github.io/proyectos/demeter/index.html" target="_blank" cclass="botonir text-primary">Probar&nbsp;&nbsp;<i class="fa fa-eye"></i></a></div>
                     </div>
 
                 </div>
