Añade codigo meta para ser visible en Internet

--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
+        <meta property="og:locale" content="es_ES">
+        <meta property="og:type" content="article">
+        <meta property='og:title' content='Portfolio'/>
+        <meta property='og:description' content='Portfolio personal donde se encuentran mis proyectos y mi CV.'/>
+        <meta property='og:image' content=''>
+        <meta property='og:image:secure_url' content=''>
+        <meta property="og:image:width" content="1920">
+        <meta property="og:image:height" content="941">
         <title>Rafael Carrillo Bonilla</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
