--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <meta property="og:type" content="article">
         <meta property='og:title' content='Portfolio'/>
         <meta property='og:description' content='Portfolio personal donde se encuentran mis proyectos y mi CV.'/>
-        <meta property='og:image' content=''>
-        <meta property='og:image:secure_url' content=''>
+        <meta property='og:image' content='https://raw.githubusercontent.com/rafacb98/rafacb98.github.io/main/assets/img/portfolio_meta.png'>
+        <meta property='og:image:secure_url' content='https://raw.githubusercontent.com/rafacb98/rafacb98.github.io/main/assets/img/portfolio_meta.png'>
         <meta property="og:image:width" content="1920">
         <meta property="og:image:height" content="941">
         <title>Rafael Carrillo Bonilla</title>
