Corrige error de clase

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ salir con mis amigos y hacer deporte, en especial el futbol.</p>
                             <div class="subheading mb-3">Hecho mediante JavaScript</div>
                             <p>Juego con pseudocódigo en donde mediante órdenes vas moviendo el robot con el objetivo de desactivar todas las minas hasta llegar al final.</p>
                         </div>
-                        <div class="flex-shrink-0"><a href="https://rafacb98.github.io/proyectos/demeter/index.html" target="_blank" cclass="botonir text-primary">Probar&nbsp;&nbsp;<i class="fa fa-eye"></i></a></div>
+                        <div class="flex-shrink-0"><a href="https://rafacb98.github.io/proyectos/demeter/index.html" target="_blank" class="botonir text-primary">Probar&nbsp;&nbsp;<i class="fa fa-eye"></i></a></div>
                     </div>
 
                 </div>
