Corrige logos de los proyectos

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ salir con mis amigos y hacer deporte, en especial el futbol.</p>
                 <div class="resume-section-content">
                     <h2 class="mb-5">Mis proyectos</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5 proyectos">
-                    <img src="assets/img/logo_gestdgt+.png" alt="logogestdgt+" height="100px" class="logoproyectos" />
+                    <img src="assets/img/logo_gestdgt+.png" alt="logogestdgt+" height="100px" class="img-responsive logoproyectos" />
                         <div class="flex-grow-1">
                             <h3 class="mb-0">GestDGT+</h3>
                             <div class="subheading mb-3">Hecho mediante servicios PHP con el framework SLIM</div>
@@ -231,7 +231,7 @@ salir con mis amigos y hacer deporte, en especial el futbol.</p>
                         <div class="flex-shrink-0"><a href="http://icarosproject.com/PROY/GESTDGT/" target="_blank" class="botonir text-primary">Probar&nbsp;&nbsp;<i class="fa fa-eye"></i></a></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5 proyectos">
-                    <img src="assets/img/logo_buscaminas.png" alt="logogbuscaminas" height="100px" class="logoproyectos" />
+                    <img src="assets/img/logo_buscaminas.png" alt="logogbuscaminas" height="100px" class="img-responsive logoproyectos" />
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Buscaminas</h3>
                             <div class="subheading mb-3">Hecho mediante ReactJS</div>
@@ -240,7 +240,7 @@ salir con mis amigos y hacer deporte, en especial el futbol.</p>
                         <div class="flex-shrink-0"><a href="https://rafacb98.github.io/proyectos/buscaminas/index.html" target="_blank" class="botonir text-primary">Probar&nbsp;&nbsp;<i class="fa fa-eye"></i></a></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5 proyectos">
-                    <img src="assets/img/logo_demeter.jpg" alt="logodemeter" height="100px" class="logoproyectos" />
+                    <img src="assets/img/logo_demeter.jpg" alt="logodemeter" height="100px" class="img-responsive logoproyectos" />
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Demeter</h3>
                             <div class="subheading mb-3">Hecho mediante JavaScript</div>
