--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
         <link href="css/styles.css" rel="stylesheet" />
         <link href="css/miestilo.css" rel="stylesheet" />
     </head>
-    <body id="page-top">
-        <!-- Navigation-->
+    <body class="animacionbody" id="page-top">
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">RAFAEL CARRILLO BONILLA</span>
